--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 <section id="#" class="sectiony introy">
   <div class="container">
     <div class="col-md-8 col-md-offset-2 text-center">
-      <h5>Tenho algumas experiencis proficionais que quero compartilhar tambem.</h5>
+      <h5>Tenho algumas experiencias proficionais que quero compartilhar tambem.</h5>
     </div>
   </div>
 </section>
